--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -17,15 +17,15 @@
 
 // Swiper Slider
 .swiper-pagination-bullet{
-	@apply bg-white opacity-100;
+	@apply w-3 h-3 bg-white opacity-100;
 }
 
 .swiper-pagination-bullet-active{
-	@apply bg-secondBlue;
+	@apply bg-cyan;
 }
 
 .swiper-button-next, .swiper-button-prev{
-	@apply w-10 h-10  sm:w-16 sm:h-16 bg-black bg-opacity-40 text-white duration-300 hover:bg-opacity-50;
+	@apply w-10 h-10 sm:w-16 sm:h-16 bg-black bg-opacity-40 text-white duration-300 hover:bg-opacity-50;
 	&:after{
 		@apply text-base sm:text-xl font-bold;
 	}
@@ -40,7 +40,5 @@
 }
 
 .swiper-lazy-preloader{
-	@apply border-mainBlue border-t-transparent;
+	@apply border-cyan border-t-transparent top-20;
 }
-
-// 	
