--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -42,3 +42,19 @@
 .swiper-lazy-preloader{
 	@apply border-cyan border-t-transparent top-20;
 }
+
+h2{
+	@apply font-bold text-xl mb-1 text-gray-700
+}
+
+p{
+	@apply mb-5 text-gray-800
+}
+
+ul{
+	@apply pl-4 mb-5
+}
+
+li{
+	@apply ml-4 list-disc mb-1
+}
