--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -40,7 +40,7 @@
 }
 
 .swiper-lazy-preloader{
-	@apply border-cyan border-t-transparent top-[50%] translate-y-[-50%];
+	@apply border-cyan border-t-transparent;
 }
 
 h3{
