--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -1,6 +1,6 @@
 .banner-slide{
-	// min-height: 450px;
-	height: 100%;
+	padding-bottom: 30%;
+	height: auto;
 	position: relative;
 	&:before{
 		content: '';
@@ -11,4 +11,15 @@
 		height: 100%;
 		background-color: rgba(0,0,0,.1);
 	}
+	img{
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+	// @media (max-width: 1536px){
+	// 	min-height: 374px;
+	// }
+	// @media (max-width: 1280px){
+	// 	min-height: 297px;
+	// }
 }
