--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -17,7 +17,7 @@
 
 // Swiper Slider
 .swiper-pagination-bullet{
-	@apply w-3 h-3 bg-white opacity-100;
+	@apply sm:w-3 sm:h-3 bg-white opacity-100;
 }
 
 .swiper-pagination-bullet-active{
