--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -25,7 +25,7 @@
 }
 
 .swiper-button-next, .swiper-button-prev{
-	@apply w-10 h-10 sm:w-16 sm:h-16 bg-black bg-opacity-40 text-white duration-300 hover:bg-opacity-50;
+	@apply w-8 h-8 sm:w-16 sm:h-16 bg-black bg-opacity-40 text-white duration-300 hover:bg-opacity-50;
 	&:after{
 		@apply text-base sm:text-xl font-bold;
 	}
@@ -41,6 +41,10 @@
 
 .swiper-lazy-preloader{
 	@apply border-cyan border-t-transparent;
+}
+
+h2{
+	@apply font-bold text-2xl mb-3 text-gray-800
 }
 
 h3{
