--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -44,7 +44,7 @@
 }
 
 h2{
-	@apply font-bold text-2xl mb-3 text-gray-800
+	@apply font-bold text-3xl mb-3 text-gray-800
 }
 
 h3{
@@ -55,10 +55,14 @@ p{
 	@apply mb-5 text-gray-800
 }
 
-ul{
+ul, ol{
 	@apply pl-4 mb-5
 }
 
-li{
+ul li{
 	@apply ml-4 list-disc mb-1
+}
+
+ol li{
+	@apply ml-4 list-decimal mb-1
 }
