--- a/src/scss/tailwind.scss
+++ b/src/scss/tailwind.scss
@@ -15,6 +15,11 @@
 	@apply flex items-center;
 }
 
+.col{
+	@apply flex-grow flex-shrink-0;
+	flex-basis: 0%;
+}
+
 // Swiper Slider
 .swiper-pagination-bullet{
 	@apply sm:w-3 sm:h-3 bg-white opacity-100;
