--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -5,3 +5,8 @@ input[tabindex="-1"]{
 	max-width: 200px;
 	height: 0;
 }
+
+form.has-error::before {
+	content: attr(data-content);
+	color: red;
+}
