--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -16,10 +16,10 @@
 		width: 100%;
 		height: 100%;
 	}
-	// @media (max-width: 1536px){
-	// 	min-height: 374px;
-	// }
-	// @media (max-width: 1280px){
-	// 	min-height: 297px;
-	// }
+	@media (max-width: 768px){
+		padding-bottom: 0;
+		img{
+			position: relative;
+		}
+	}
 }
