--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -1,5 +1,5 @@
 .banner-slide{
-	padding-bottom: 30%;
+	// padding-bottom: 30%;
 	height: auto;
 	position: relative;
 	&:before{
@@ -12,7 +12,7 @@
 		background-color: rgba(0,0,0,.1);
 	}
 	img{
-		position: absolute;
+		position: relative;
 		width: 100%;
 		height: 100%;
 	}
