--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -4,6 +4,36 @@
 						<div class="banner-slider swiper h-full">
 							<div class="swiper-wrapper h-full">
 
+								<a href="https://moskvich-samauto.ru/offers/offer-23810664/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="https://moskvich-samauto.ru/offers/offer-37365841/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_2.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_2.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="https://moskvich-samauto.ru/offers/offer-72264826/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_3.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_3.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="https://moskvich-samauto.ru/offers/offer-86480807/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_4.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_4.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'moskvich'; $store.state.isModalOpen = true;">
+									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="https://nissansamara.ru/owners/carcare-specials/vigodnoe-tehnicheskoe-obsluzhivanie/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_6.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_6.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
 								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
 									<img data-src="/img/banners/lr-Defender-2022-06-01_14-44-29.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/lr-Defender-2022-06-01_14-44-29.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
@@ -22,31 +52,6 @@
 								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;">
 									<img data-src="/img/banners/i-QX50.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/i-QX50.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/i-QX55.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/i-QX55.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/i-QX80.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/i-QX80.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/n-Murrano-1024х550.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/n-Murrano-620x480.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/n-Qashqai-1024х550.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/n-Qashqai-620x480.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/n-Terrano-1024х550.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/n-Terrano-620x480.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
 								</a>
 								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
