--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 					{% endif %}
 
 				<div class="flex items-center">
-					<a href="https://vk.com/samarskieavtomobili" class="w-[24px] sm:w-[30px] md:w-[48px]" target="_blank">
+					<a href="https://vk.com/63cars" class="w-[24px] sm:w-[30px] md:w-[48px]" target="_blank">
 						<img src="{{ 'img/vk.svg' | relative_url }}" alt="VK" class="w-full h-auto">
 					</a>
 					<button
