--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -1,8 +1,8 @@
 			<section class="banner relative" id="banner">
-				<div class="banner-wrapper h-full">
-					<div class="banner-sliders h-full">
-						<div class="banner-slider swiper h-full">
-							<div class="swiper-wrapper h-full">
+				<div class="banner-wrapper">
+					<div class="banner-sliders">
+						<div class="banner-slider swiper">
+							<div class="swiper-wrapper">
 
 								<a href="https://moskvich-samauto.ru/offers/offer-23810664/" class="banner-slide swiper-slide" target="_blank">
 									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
@@ -24,7 +24,7 @@
 									<img data-src="/img/banners/new_4.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
 								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'moskvich'; $store.state.isModalOpen = true;">
+								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
 									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
@@ -32,6 +32,11 @@
 								<a href="https://nissansamara.ru/owners/carcare-specials/vigodnoe-tehnicheskoe-obsluzhivanie/" class="banner-slide swiper-slide" target="_blank">
 									<img data-src="/img/banners/new_6.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/new_6.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
+								<a href="https://nissansamara.ru/owners/carcare-specials/skidki-uslugi-servisa/" class="banner-slide swiper-slide" target="_blank">
+									<img data-src="/img/banners/new_7.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_7.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
 								</a>
 								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
