--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -4,6 +4,11 @@
 						<div class="banner-slider swiper">
 							<div class="swiper-wrapper">
 
+								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
+									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+									<div class="swiper-lazy-preloader"></div>
+								</a>
 								<a href="https://moskvich-samauto.ru/offers/offer-23810664/" class="banner-slide swiper-slide" target="_blank">
 									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
@@ -39,29 +44,9 @@
 									<img data-src="/img/banners/new_7.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
 								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/lr-Defender-2022-06-01_14-44-29.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/lr-Defender-2022-06-01_14-44-29.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/lr-Discovery-2022-06-01_14-48-31.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/lr-Discovery-2022-06-01_14-48-31.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/lr-1000x300-Range-Rover.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/lr-1000x300-Range-Rover.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
 								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;">
 									<img data-src="/img/banners/i-QX50.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 									<img data-src="/img/banners/i-QX50.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/n-X-Trail-1024х550.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/n-X-Trail-620x480.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 									<div class="swiper-lazy-preloader"></div>
 								</a>
 
