added new banners

--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -1,31 +1,46 @@
-			<section class="banner relative" id="banner">
-				<div class="banner-wrapper">
-					<div class="banner-sliders">
-						<div class="banner-slider swiper">
-							<div class="swiper-wrapper">
+<section class="banner relative" id="banner">
+	<div class="banner-wrapper">
+		<div class="banner-sliders">
+			<div class="banner-slider swiper">
+				<div class="swiper-wrapper">
 
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="https://moskvich-samauto.ru/customers/promotions/" class="banner-slide swiper-slide" target="_blank">
-									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
-								<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-									<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
-									<div class="swiper-lazy-preloader"></div>
-								</a>
+					<a href="https://moskvich-samauto.ru/offers/vygoda-do-461-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich3.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich3.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="https://moskvich-samauto.ru/models/moskvich-3e/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich3e.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich3e.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="https://moskvich-samauto.ru/news/moskvich-6-vstal-na-konvejer/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich6.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich6.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
+						<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="https://moskvich-samauto.ru/customers/promotions/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
+						<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
 
-							</div>
-						</div>
-
-						<div class="swiper-pagination"></div>
-						<div class="swiper-button-prev z-20"></div>
-						<div class="swiper-button-next z-20"></div>
-					</div>
 				</div>
-			</section>
+			</div>
+
+			<div class="swiper-pagination"></div>
+			<div class="swiper-button-prev z-20"></div>
+			<div class="swiper-button-next z-20"></div>
+		</div>
+	</div>
+</section>
