--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -4,19 +4,19 @@
 			<div class="banner-slider swiper">
 				<div class="swiper-wrapper">
 
-					<a href="https://moskvich-samauto.ru/offers/vygoda-do-461-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich3.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich3.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/models/moskvich-3e/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich3e.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich3e.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich-3-2.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/mmoskvich-3-2.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/news/moskvich-6-vstal-na-konvejer/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich6.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich6.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/customers/promotions/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich-3e.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich-3e.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
 						<div class="swiper-lazy-preloader"></div>
 					</a>
 					<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
