added new banners

--- a/_includes/sections/banner.html
+++ b/_includes/sections/banner.html
@@ -4,6 +4,16 @@
 			<div class="banner-slider swiper">
 				<div class="swiper-wrapper">
 
+					<a href="https://moskvich-samauto.ru/news/moskvich-3-ot-330-v-den/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich-3-ot-330-v-den.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich-3-ot-330-v-den.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
+					<a href="https://moskvich-samauto.ru/models/moskvich-6/" class="banner-slide swiper-slide" target="_blank">
+						<img data-src="/img/banners/moskvich-6.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
+						<img data-src="/img/banners/moskvich-6.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+						<div class="swiper-lazy-preloader"></div>
+					</a>
 					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
 						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
 						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
