--- a/vite/src/scss/app.scss
+++ b/vite/src/scss/app.scss
@@ -9,6 +9,6 @@
 
 @import "tailwind";
 
-@import "blocks/header";
-@import "blocks/banner";
-@import "blocks/aside";
+@import "ui/header";
+@import "ui/banner";
+@import "ui/aside";
