--- a/vite/src/scss/app.scss
+++ b/vite/src/scss/app.scss
@@ -4,7 +4,6 @@
 @import "fonts";
 @import "vars";
 
-
 @import "swiper/css/bundle";
 
 @import "tailwind";
@@ -12,3 +11,4 @@
 @import "ui/header";
 @import "ui/banner";
 @import "ui/aside";
+@import "ui/slider";
