--- a/public/_includes/head.html
+++ b/public/_includes/head.html
@@ -9,29 +9,13 @@
 	<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 	<meta property="og:type" content="website" />
 	<link rel="icon" href="{{ './img/favicon.png' | relative_url }}">
-	<link rel="stylesheet" href="{{ './assets/css/styles.css' | relative_url }}">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-215848439-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-215848439-1');
-</script>
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(86970610, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<!-- /Yandex.Metrika counter -->
+{% if jekyll.environment == "development" %}
+	<link rel="stylesheet" href="http://{{ site.host }}:{{ site.port | minus: 1 }}/src/scss/app.scss">
+{% else %}
+	{% if site.data.manifest and site.data.manifest['src/scss/app.scss'] and site.data.manifest['src/scss/app.scss'].file %}
+	<link rel="stylesheet" href="{{ site.data.manifest['src/scss/app.scss'].file | relative_url }}">
+	{% endif %}
+	{%- include head-scripts.html -%}
+{% endif %}
 </head>
