--- a/public/_layouts/default.html
+++ b/public/_layouts/default.html
@@ -7,7 +7,7 @@
 	@keydown.escape="$store.state.isModalOpen = false"
 	:class="{'overflow-hidden md:pr-[17px]': $store.state.isModalOpen || $store.state.isResponseModalOpen}"
 >
-<noscript><div><img src="https://mc.yandex.ru/watch/86970610" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	{%- include body-scripts.html -%}
 
 {% include header.html %}
 
@@ -40,7 +40,14 @@
 	{% include modals/callback.html %}
 	{% include modals/message.html %}
 
-	<script src="{{ './assets/js/scripts.js' | relative_url }}"></script>
+	{% if jekyll.environment == "development" %}
+		<script type="module" src="http://{{ site.host }}:{{ site.port | minus: 1 }}/src/js/app.js"></script>
+	{% else %}
+		{% if site.data.manifest and site.data.manifest['src/js/app.js'] and site.data.manifest['src/js/app.js'].file %}
+		<script type="module" src="{{ site.data.manifest['src/js/app.js'].file | relative_url }}"></script>
+		{% endif %}
+	{% endif %}
 
+	{%- include footer-scripts.html -%}
 </body>
 </html>
