--- a/public/_includes/sections/banner.html
+++ b/public/_includes/sections/banner.html
@@ -1,47 +1,75 @@
 <section class="banner relative">
-    <div class="relative pb-[56.25%] max-[400px]:pb-[70%]">
-        <div class="absolute inset-0">
-            <div class="swiper banner-slider h-full text-white">
-                <div class="swiper-wrapper">
+	<div class="banner-wrapper relative min-h-[300px]">
+		<div class="">
+			<div class="swiper banner-slider h-full text-white">
+				<div class="swiper-wrapper">
 
-					<a href="https://moskvich-samauto.ru/news/moskvich-3-ot-330-v-den/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich-3-ot-330-v-den.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich-3-ot-330-v-den.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+
+					<a href="https://moskvich-samauto.ru/news/moskvich-3-ot-330-v-den/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="{{ 'img/banners/moskvich-3-ot-330-v-den.webp' | relative_url }}"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Москвис 3 от 330 рублей в день"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/models/moskvich-6/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich-6.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich-6.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/models/moskvich-6/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="{{ 'img/banners/moskvich-6.webp' | relative_url }}"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Москвис 6 в наличии"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich-3-1.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+
+					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="/img/banners/moskvich-3-1.webp"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich-3-2.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich-3-2.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/offers/vygoda-do-575-000-rublej-na-pokupku-moskvich-3/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="/img/banners/moskvich-3-2.webp"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/customers/promotions/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/moskvich-3e.webp" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/moskvich-3e.webp" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/customers/promotions/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="/img/banners/moskvich-3e.webp"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
-						<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/new_0.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="#" class="swiper-slide banner-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;">
+						<img
+							src="/img/banners/new_0.jpg"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="https://moskvich-samauto.ru/customers/promotions/" class="banner-slide swiper-slide" target="_blank">
-						<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/new_1.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="https://moskvich-samauto.ru/customers/promotions/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="/img/banners/new_1.jpg"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
-					<a href="#" class="banner-slide swiper-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
-						<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center hidden md:block swiper-lazy" />
-						<img data-src="/img/banners/new_5.jpg" class="h-full w-full object-cover object-center block md:hidden swiper-lazy" />
+					<a href="#" class="swiper-slide banner-slide" @click.prevent="$refs.modalTitle.innerText='Оставить заявку на выкуп авто'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;">
+						<img
+							src="/img/banners/new_5.jpg"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							loading="lazy"
+						/>
 						<div class="swiper-lazy-preloader"></div>
 					</a>
 
