move aurora center, rename INFINITI

--- a/public/_includes/header.html
+++ b/public/_includes/header.html
@@ -10,7 +10,7 @@
 					<span>
 						<img src="{{ 'img/logo.png' | relative_url }}" class="w-[100px] sm:w-[150px] md:w-[250px]" alt="Самарские Автомобили">
 					</span>
-					<span class="hidden md:block text-center text-xs text-gray-800 mt-2"><b>Москвич</b>, <b>Nissan</b>, <b>Infiniti</b>, <b>Jaguar</b>, <b>Land Rover</b> </span>
+					<span class="hidden md:block text-center text-xs text-gray-800 mt-2"><b>Москвич</b>, <b>Nissan</b>, <b>INFINITI</b>, <b>Jaguar</b>, <b>Land Rover</b> </span>
 					{% if page.url != '/' %}
 					</a>
 					{% else %}
