--- a/public/_includes/sections/banner.html
+++ b/public/_includes/sections/banner.html
@@ -5,11 +5,20 @@
 				<div class="swiper-wrapper">
 
 
+					<a href="https://moskvich-samauto.ru/offers/avtomobili-moskvich-na-iuzhnom-shosse-stali-dostupnee-blagodaria-deistviiu-gosprogrammy/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+						<img
+							src="{{ 'img/banners/gosprogrammat.webp' | relative_url }}"
+							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Госпрограмма на Москвич"
+							loading="lazy"
+						/>
+						<div class="swiper-lazy-preloader"></div>
+					</a>
 					<a href="https://moskvich-samauto.ru/news/moskvich-3-ot-330-v-den/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
 							src="{{ 'img/banners/moskvich-3-ot-330-v-den.webp' | relative_url }}"
 							class="absolute inset-0 h-full w-full object-cover object-center"
-							alt="Москвис 3 от 330 рублей в день"
+							alt="Москвич 3 от 330 рублей в день"
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
@@ -18,7 +27,7 @@
 						<img
 							src="{{ 'img/banners/moskvich-6.webp' | relative_url }}"
 							class="absolute inset-0 h-full w-full object-cover object-center"
-							alt="Москвис 6 в наличии"
+							alt="Москвич 6 в наличии"
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
@@ -27,6 +36,7 @@
 						<img
 							src="/img/banners/moskvich-3e.webp"
 							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Москвич 3е. Выгода 625 000 ₽"
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
@@ -35,6 +45,7 @@
 						<img
 							src="/img/banners/new_0.jpg"
 							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Премиальные автомобили"
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
@@ -43,6 +54,7 @@
 						<img
 							src="/img/banners/new_5.jpg"
 							class="absolute inset-0 h-full w-full object-cover object-center"
+							alt="Выкуп автомобилей всех марок"
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
