--- a/public/_includes/sections/banner.html
+++ b/public/_includes/sections/banner.html
@@ -1,8 +1,8 @@
 <section class="banner relative">
-	<div class="banner-wrapper relative min-h-[300px]">
-		<div class="">
+	<div class="banner-wrapper relative min-h-[100px] sm:min-h-[185px] md:min-h-[300px]">
+		<div class="relative end-0">
 			<div class="swiper banner-slider h-full text-white">
-				<div class="swiper-wrapper">
+				<div class="swiper-wrapper flex items-end">
 
 
 					<a href="https://moskvich-samauto.ru/offers/avtomobili-moskvich-na-iuzhnom-shosse-stali-dostupnee-blagodaria-deistviiu-gosprogrammy/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
