hidden unnecessary banners

--- a/public/_includes/sections/banner.html
+++ b/public/_includes/sections/banner.html
@@ -5,7 +5,7 @@
 				<div class="swiper-wrapper flex items-end">
 
 
-					<a href="https://moskvich-samauto.ru/offers/avtomobili-moskvich-na-iuzhnom-shosse-stali-dostupnee-blagodaria-deistviiu-gosprogrammy/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
+					<!-- <a href="https://moskvich-samauto.ru/offers/avtomobili-moskvich-na-iuzhnom-shosse-stali-dostupnee-blagodaria-deistviiu-gosprogrammy/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
 							src="{{ 'img/banners/gosprogrammat.webp' | relative_url }}"
 							class="absolute inset-0 h-full w-full object-cover object-center"
@@ -22,7 +22,7 @@
 							loading="lazy"
 						/>
 						<div class="swiper-lazy-preloader"></div>
-					</a>
+					</a> -->
 					<a href="https://moskvich-samauto.ru/models/moskvich-6/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
 							src="{{ 'img/banners/moskvich-6.webp' | relative_url }}"
