--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Head from '@/components/Head.astro';
 import ScriptHead from '@/components/Scripts/Head.astro';
 import ScriptBodyBegin from '@/components/Scripts/BodyBegin.astro';
 import ScriptBodyEnd from '@/components/Scripts/BodyEnd.astro';
-// import Header from '@/components/Header.astro';
+import Header from '@/components/Header/Header.astro';
 // import Footer from '@/components/Footer.astro';
 // import Modals from '@/components/Modals.astro';
 // import UpBtn from '@/components/UpBtn.astro';
@@ -34,7 +34,7 @@ import ScriptBodyEnd from '@/components/Scripts/BodyEnd.astro';
 >
 <ScriptBodyBegin />
 
-<!-- HEADER -->
+	<Header />
 
 	<main class="flex-grow">
 		<div class="site-content">
