--- a/src/components/Banner/Banner.astro
+++ b/src/components/Banner/Banner.astro
@@ -1,3 +1,7 @@
+---
+import './banner.scss';
+---
+
 <section class="banner relative">
 	<div class="banner-wrapper relative min-h-[100px] sm:min-h-[185px] md:min-h-[300px]">
 		<div class="relative end-0">
@@ -7,7 +11,7 @@
 
 					<!-- <a href="https://moskvich-samauto.ru/offers/avtomobili-moskvich-na-iuzhnom-shosse-stali-dostupnee-blagodaria-deistviiu-gosprogrammy/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
-							src="{{ 'img/banners/gosprogrammat.webp' | relative_url }}"
+							src="/img/banners/gosprogrammat.webp"
 							class="absolute inset-0 h-full w-full object-cover object-center"
 							alt="Госпрограмма на Москвич"
 							loading="lazy"
@@ -16,7 +20,7 @@
 					</a>
 					<a href="https://moskvich-samauto.ru/news/moskvich-3-ot-330-v-den/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
-							src="{{ 'img/banners/moskvich-3-ot-330-v-den.webp' | relative_url }}"
+							src="/img/banners/moskvich-3-ot-330-v-den.webp"
 							class="absolute inset-0 h-full w-full object-cover object-center"
 							alt="Москвич 3 от 330 рублей в день"
 							loading="lazy"
@@ -25,7 +29,7 @@
 					</a> -->
 					<a href="https://moskvich-samauto.ru/models/moskvich-6/" class="swiper-slide banner-slide" data-swiper-autoplay="4000">
 						<img
-							src="{{ 'img/banners/moskvich-6.webp' | relative_url }}"
+							src="/img/banners/moskvich-6.webp"
 							class="absolute inset-0 h-full w-full object-cover object-center"
 							alt="Москвич 6 в наличии"
 							loading="lazy"
@@ -68,3 +72,7 @@
 		</div>
 	</div>
 </section>
+
+<script>
+	import './banner'
+</script>
