--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ import ScriptBodyBegin from '@/components/Scripts/BodyBegin.astro';
 import ScriptBodyEnd from '@/components/Scripts/BodyEnd.astro';
 import Header from '@/components/Header/Header.astro';
 import Banner from '@/components/Banner/Banner.astro';
+import Aside from '@/components/Aside/Aside.astro';
 // import Footer from '@/components/Footer.astro';
 // import Modals from '@/components/Modals.astro';
 // import UpBtn from '@/components/UpBtn.astro';
@@ -46,7 +47,7 @@ import Banner from '@/components/Banner/Banner.astro';
 				<div 
 					class="grid grid-cols-6 xl:grid-cols-5" 
 					x-data="{submenu: false}">
-<!-- ASIDE -->
+					<Aside />
 					<div class="col-span-6 lg:col-span-4 lg:px-5">
 						<slot />
 <!-- ADV -->
