--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -5,18 +5,9 @@
 	}
 }
 
-.interior-pagination, .tehnology-pagination{
-	.swiper-pagination-bullet{
-		@apply bg-gray-500 #{!important};
-		&.swiper-pagination-bullet-active {
-			@apply bg-accent #{!important};
-		}
-	}
-}
-
 .swiper-button-next,
 .swiper-button-prev {
-	@apply bg-white text-black h-32 w-12 top-1/2 -translate-y-1/2 opacity-20 transition-opacity duration-500 ease-out hover:opacity-60;
+	@apply bg-white text-black h-32 w-12 top-1/2 -translate-y-1/2 opacity-20 transition-opacity duration-500 ease-out hover:opacity-60 #{!important};
 	&::after {
 		font-size: 20px;
 		font-weight: bold;
@@ -100,6 +91,36 @@
 		}
 		&.swiper-slide-active::after{
 			opacity: 0;
+		}
+	}
+}
+
+.banner-slide{
+	// padding-bottom: 30%;
+	height: auto;
+	position: relative;
+	// aspect-ratio: 1/0.75;
+	// @media (min-width: 768px){
+	// 	aspect-ratio: auto;
+	// }
+	&:before{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,.1);
+	}
+	img{
+		position: relative;
+		width: 100%;
+		height: 100%;
+	}
+	@media (max-width: 768px){
+		padding-bottom: 0;
+		img{
+			position: relative;
 		}
 	}
 }
