Кредит и лизинг в Самаре

--- a/src/pages/centers/south/index.astro
+++ b/src/pages/centers/south/index.astro
@@ -1,9 +1,10 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+import { SITE_TITLE } from "@/const";
 ---
 
 <Layout
-	title="Автоцентры на Южном шоссе | Продажа авто в Самаре, автоцентры и автосалоны Самары по продаже новых автомобилей"
+	title={`Автоцентры на Южном шоссе | ${SITE_TITLE}`}
 	image="/img/banners/new_0.jpg"
 >
 	<h1>Автоцентры на Южном шоссе</h1>
