--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -85,3 +85,7 @@ aside a{
 footer a{
 	@apply text-white text-opacity-80;
 }
+
+.btn{
+	@apply inline-block py-2 px-4 bg-accent text-white text-center;
+}
