--- a/src/pages/cars/moskvich/index.astro
+++ b/src/pages/cars/moskvich/index.astro
@@ -27,7 +27,7 @@ import { SITE_TITLE } from "@/const";
 		<a
 			href="#"
 			target="_blank"
-			@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'москвич'; $store.state.isModalOpen = true;"
+			@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'moskvich'; $store.state.isModalOpen = true;"
 		>
 			<font color="blue">Записаться на тест-драйв »</font>
 		</a>
